<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="220dp"
    android:minHeight="150dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/concer_bg_white">

    <TextView
        android:id="@+id/tv_setuppwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:textColor="@color/set_diolog_textColor"
        android:text="@string/set_diolog_text"
        android:textSize="@dimen/set_diolog_textSize"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="@color/set_diolog_textColor"
        />
   <EditText
       android:id="@+id/et_firstpassword"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:inputType="textPassword"
       android:hint="@string/set_diolog_hint"
       android:background="@color/set_diolog_background" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="@color/set_diolog_textColor"/>
    <EditText
        android:id="@+id/et_sure_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/set_diolog_hint1"
        android:background="@color/set_diolog_background"
         />
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="@color/set_diolog_textColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_diolog_sure"
            android:background="@android:color/white"/>
        <View
            android:layout_width="1.0px"
            android:layout_height="match_parent"
            android:background="@color/set_diolog_textColor"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_diolog_cancel"
            android:background="@android:color/white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="@color/set_diolog_textColor"/>
</LinearLayout>
