<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/tv_appsize"
            style="@style/textview"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_appname"
            style="@style/textview"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/img_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_appisroom"
            style="@style/textview"
            android:layout_marginTop="3dp"
            android:layout_alignLeft="@+id/tv_appname"
            android:layout_toRightOf="@+id/img_app"
            android:layout_below="@+id/tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/item_list_color"/>
    <LinearLayout
        android:id="@+id/ll_option_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:visibility="visible">
        <TextView
            android:id="@+id/tv_launch_app"
            style="@style/tvyellow14sp"
            android:drawableTop="@drawable/item_appmanager_list_phone"
            android:text="@string/item_app_list_start"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/item_list_color"/>
        <TextView
            android:id="@+id/tv_uninstall_app"
            style="@style/tvyellow14sp"
            android:drawableTop="@drawable/item_appmanager_list_delete"
            android:text="@string/item_app_list_download"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/item_list_color"/>
        <TextView
            android:id="@+id/tv_share_app"
            style="@style/tvyellow14sp"
            android:drawableTop="@drawable/item_appmanager_list_share"
            android:layout_marginTop="-2dp"
            android:text="@string/item_app_list_share"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/item_list_color"/>
        <TextView
            android:id="@+id/tv_setting_app"
            style="@style/tvyellow14sp"
            android:drawableTop="@drawable/item_appmanager_list_setting"
            android:text="@string/item_app_list_setting"
            android:layout_marginTop="-2dp"/>

    </LinearLayout>


</LinearLayout>
